--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -458,4 +458,83 @@ partitions $E = E_1 + E_2$ with $\Card E_1 = k$.  As a result,
 [n - k]. \]
 \end{proof}
 
+The \term{uniform} species is a species with only one structure on each
+set; one can give it various representations: the structures of
+complete graphs, chaotic topologies XXX ?, and identical applications XXX? determine
+the uniform species.
+
+EXAMPLE 7. Let $S$ be the species of \term{permutations}, and $S_0$ that of
+permutations without \emph{fixed points}, and $U$ the uniform species. We have $S = S_0 \cdot U$
+XXX Fig.; taking cardinalities, we get:
+
+
+\[ \frac{1}{1-x} = S_0 (x) e^x \]
+and therefore
+
+\[ S_0 (x) = \frac{e^{-x}}{1 - x}. \]
+
+EXAMPLE 8. Let $D$ be the species of endofunctions, $D_0$ the species
+endofunctions equipped with a fixed point, and $A$ and the species of arborsecences XXX?. Then
+
+\[ D_0 = A \cdot D. \]
+
+Indeed, one can partition the domain $E$ of an endofunction $\phi$ equipped with a
+fixed point $x_0$ into two parts $E = E_1 + E_2$. The first, $E_1$, consists of
+all the points ultimately transformed into $x_0$ by $\phi$. On $E_1$, $\phi$ induces
+a contraction (XXX Chap. 1 Ex. 2), which is equivalent to an arborescence XXX. On
+the second part $E_2$, $\phi$ induces an arbitrary endofunction (XXX Fig. 2).
+
+The \emph{product} $M = \prod_{i=1}^n M_i$ of a finite sequence of species can be explicitly defined
+as follows: a structure of the species $M$ on $E$ is a \emph{partition} $E = E_1 + \dots + E_n$ where
+each part $E_i$ (possibly empty) is \emph{equipped} with a structure of the species $M_i$.
+
+
+
+
+
+
+
+FIGURE 2 XXX
+
+One can also describe the \term{power} $N^S$ of a species $N$ by a finite set
+$S$: a structure of the species $N^S$ on $E$ is a function $\chi : E \to S$ where each
+fiber is \emph{equipped} with a structure of the species $N$; in other words, it is an \emph{$N$-enriched} function.
+
+
+Example 9. (Joyal). A \emph{vertebrate} is a tree \term{bipointed} by a pair
+$(p_0, p_1)$ of vertices. We say that $p_0$ is the \term{tail vertex} and $p_1$ the
+\term{head vertex}. The shortest path from the tail vertex to the head vertex
+is the \term{spine}. The vertices along the spine are
+\term{vertebrae}. For each vertex $p$, let $v(p)$ be the vertebra
+closest to $p$. The function $v$ is idempotent, and there a tree???-structure on each fiber of $v$.
+The roots of these trees are
+the vertebrae. Thus, a vertebrate on $E$ determines a variable length partition
+$E = E_1 + \dots + E_n$, in which each part $E_i$ is equipped with a tree structure,
+and vice versa. So we have the identity:
+
+\[ V = A + A^2 + A^3 + \dots, \]
+
+where $V$ is the species of vertebrates and $A$ that of trees??? (Fig 3 XXX).
+
+EXAMPLE 10. Let $L$ be the species of linear orders and $S$ a finite set.
+A structure of the species $L^S$ on $E$ is a function $E \to S$ where each
+fiber is equipped with a linear order. The number $l(n, s)$ of such objects (if
+$n = \Card E$ and $s = \Card S$) is the coefficient of $x^n/n!$ in the series
+$(1-x)^{-s}$. This shows that
+
+\[ l(n, s) = s (s + 1) \dots (s + n-1). \]
+
+
+
+
+
+
+
+FIGURE 3
+
+Hereafter, we will often consider that a finite set $A$
+determines a species by setting
+
+\[ A [E] = \begin{cases} A \quad \text{if $E = \varnothing$} \\ \varnothing \quad \text{otherwise}. \end{cases} \]
+
 \end{document}
