--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -14,6 +14,8 @@
 \usepackage{todonotes}
 \usepackage{xspace}
 
+\usepackage[backend=cairo,extension=pdf]{diagrams}
+
 \usepackage[authoryear]{natbib}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -428,6 +430,12 @@ placed on the set of \emph{edges} of the fibers.  For example, an
 $R$-enriched tree can be represented as in Figure XXX \todo{make a
   figure} where an arc cutting through the edges of a fiber denotes an
 $R$-structure. Don't forget the leaves.
+\begin{figure}
+  \centering
+  \begin{diagram}
+    
+  \end{diagram}
+\end{figure}
 
 \section{The Combinational Operations}
 \label{sec:combinatorial-operations}
