fix up figure 1

--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -427,8 +427,8 @@ fibers.)
 In graphical representations of endofunctions or $R$-enriched trees it
 is often convenient to assume that $R$-structures on the fibers are
 placed on the set of \emph{edges} of the fibers.  For example, an
-$R$-enriched tree can be represented as in Figure XXX \todo{make a
-  figure} where an arc cutting through the edges of a fiber denotes an
+$R$-enriched tree can be represented as in \pref{fig:enriched-tree}
+where an arc cutting through the edges of a fiber denotes an
 $R$-structure. Don't forget the leaves.
 \begin{figure}
   \centering
@@ -436,6 +436,7 @@ $R$-structure. Don't forget the leaves.
 import Diagrams
 dia = drawEnrichedTree (layoutEnrichedTree figure0) # frame 0.5
   \end{diagram}
+  \caption{An $R$-enriched tree} \label{fig:enriched-tree}
 \end{figure}
 
 \section{The Combinational Operations}
