--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -726,7 +726,31 @@ equal to $n^2a_n$.  Example 9 shows that the vertebrates are
 \emph{linear} assembies of arborescences.  Example 10 shows that
 endofunctions are \emph{permuted} assemblies of arborescences.  As the
 number of linear orders coincides with the number of permutations, one
-obtains $n^2 a_n = n^n (n \geq 1)$.
+obtains $n^2 a_n = n^n$ $(n \geq 1)$.
+
+Theorem 1 suggests adopting the notation $M (X)$ to designate a
+species $M$. The variable $X$ is interpreted as the \emph{singleton}
+species: there is only a single structure of the species $X$ (up to
+isomorphism) and it is supported by the singletons. (???) The result
+$M (X)$ of the substitution of $X$ in $M$ ​​is isomorphic to $M$. For
+some species we adopt a frankly (???)  algebraic notation if it does
+not create ambiguity. Thus, $\exp (X)$ or $e^X$ designate the uniform
+species, $X e^X$ the species of pointed sets, $e^X - 1$ the uniform
+nonempty species, $\cosh (X)$ and $\sinh (X)$ the uniform even and odd
+species, $1/(1 - X)$ the species of linear orders, \etc However, we
+retain the notation $S (X)$ to designate the species of permutations
+in order to avoid confusion with $1/(1-X)$. Similarly, we will use the
+notation $C (X)$ rather than $\log 1/(1-X)$ to designate the species
+of circular permutations, \etc
+
+EXAMPLE 13. A preorder relation $\leq$ on $E$ determines an
+equivalence relation: $x \equiv y$ if and only if one has $x \leq y$ and $y \leq x$.
+The preorder relation induced on the quotient $E / \equiv$ is an order relation (???), and conversely.
+This shows that the species of preorders is obtained by substituting the species
+$e^X - 1$ in the species of order relations. In particular, the species of
+total preorders is
+
+\[ \frac{1}{1 - (e^X - 1)} = \frac{1}{2 - e^X}. \]
 
 \bibliographystyle{plainnat}
 \bibliography{series-formelles}
