--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -63,6 +63,10 @@
 \newcommand{\union}{\cup}
 \newcommand{\intersect}{\cap}
 
+\newcommand{\pointed}[1]{#1^{\bullet}}
+\newcommand{\Gc}{\pointed{G_c}}
+\newcommand{\Gcc}{\pointed{G_{cc}}}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Prettyref
 
@@ -417,7 +421,7 @@ We sometimes use the term ``enriched'' rather than ``equipped''. Thus,
 if $R$ is any species, we will say that endofunction $\phi : E \to E$
 is \term{$R$-enriched} if each of its \term{fibers} $\phi^{-1}\{x\}$,
 $x \in E$ is equipped with an $R$-structure.  Similarly, let $a$ be an
-arborescence \todo{???} on $E$. The \term{fiber} $a^{-1}\{x\}$ of a
+rooted tree on $E$. The \term{fiber} $a^{-1}\{x\}$ of a
 vertex $x \in E$ is the set of vertices of $a$ connected to $x$ by an
 edge adjacent to $x$ (for the orientation of a tree as described in
 Example XXX \todo{fill in}). We say that $a$ is \term{$R$-enriched} if each of its
@@ -525,13 +529,14 @@ and therefore
 \end{ex}
 
 \begin{ex}
-Let $D$ be the species of endofunctions, $D_0$ the species
-endofunctions equipped with a fixed point, and $A$ and the species of arborsecences XXX?. Then
+  Let $D$ be the species of endofunctions, $D_0$ the species
+  endofunctions equipped with a fixed point, and $A$ and the species
+  of rooted trees?. Then
 \[ D_0 = A \cdot D. \]
 Indeed, one can partition the domain $E$ of an endofunction $\phi$ equipped with a
 fixed point $x_0$ into two parts $E = E_1 + E_2$. The first, $E_1$, consists of
 all the points ultimately transformed into $x_0$ by $\phi$. On $E_1$, $\phi$ induces
-a contraction (XXX Chap. 1 Ex. 2), which is equivalent to an arborescence XXX. On
+a contraction (XXX Chap. 1 Ex. 2), which is equivalent to a rooted tree. On
 the second part $E_2$, $\phi$ induces an arbitrary endofunction (XXX
 Fig. 2).
 \end{ex}
@@ -567,12 +572,14 @@ function.
   vertebrates and $A$ that of trees??? (Fig 3 XXX).
 \end{ex}
 
-EXAMPLE 10. Let $L$ be the species of linear orders and $S$ a finite set.
-A structure of the species $L^S$ on $E$ is a function $E \to S$ where each
-fiber is equipped with a linear order. The number $l(n, s)$ of such objects (if
-$n = \Card E$ and $s = \Card S$) is the coefficient of $x^n/n!$ in the series
-$(1-x)^{-s}$. This shows that
-\[ l(n, s) = s (s + 1) \dots (s + n-1). \]
+\begin{ex}
+  Let $L$ be the species of linear orders and $S$ a finite set.  A
+  structure of the species $L^S$ on $E$ is a function $E \to S$ where
+  each fiber is equipped with a linear order. The number $l(n, s)$ of
+  such objects (if $n = \Card E$ and $s = \Card S$) is the coefficient
+  of $x^n/n!$ in the series $(1-x)^{-s}$. This shows that
+  \[ l(n, s) = s (s + 1) \dots (s + n-1). \]
+\end{ex}
 
 FIGURE 3
 
@@ -586,22 +593,27 @@ earlier.
 
 \subsection{Divided powers and substitution}
 
-DEFINITION 6. Let $N$ be a species such that $N [0] = \varnothing$ and let $E$ be a
-finite set. An \term{assembly} of structures of the species $N$ on $E$ is a partition
-of $E$ where each class is equipped with a structure of the species $N$.
-A \term{member} of the assembly is a class equipped with the corresponding $N$-structure. The
-\term{divided power} $\gamma_n(N)$ is the species of assemblies of $N$-structures with
-exactly $n$ members. The \term{exponential} $\exp (N)$ is the species of all
-assemblies of $N$-structures.
+\begin{defn}
+  Let $N$ be a species such that $N [0] = \varnothing$ and let $E$ be
+  a finite set. An \term{assembly} of structures of the species $N$ on
+  $E$ is a partition of $E$ where each class is equipped with a
+  structure of the species $N$.  A \term{member} of the assembly is a
+  class equipped with the corresponding $N$-structure. The
+  \term{divided power} $\gamma_n(N)$ is the species of assemblies of
+  $N$-structures with exactly $n$ members. The \term{exponential}
+  $\exp (N)$ is the species of all assemblies of $N$-structures.
+\end{defn}
 
-PROPOSITION 4. We have
-
+\begin{prop}
+We have
 \begin{align*}
 \Card \gamma_n(N) &= \frac{N(x)^n}{n!}, \\
 \Card \exp (N) &= \exp (N (x)).
 \end{align*}
+\end{prop}
 
-Proof. It obviously suffices to prove the first identity.  Note first
+\begin{proof}
+It obviously suffices to prove the first identity.  Note first
 that a structure of the species $N^n$ on $E$ determines a partition $E
 = E_1 + \dots + E_n$ into \emph{non-empty} (and disjoint) parts:
 indeed, $E_i$ is equipped with an $N$-structure and by hypothesis $N
@@ -611,21 +623,26 @@ with an $N$-structure. We have shown that an $N^n$-structure is none
 other than an $N$-assembly whose members have been placed in a
 \emph{linear order}:
 \[ \Card N^n = n! \Card \gamma_n(N). \]
+\end{proof}
+
 For many species, one may indicate a concept of \term{connectedness}
 and demonstrate that any structure consists of a partition
 where each class is equipped with a connected structure. Under these conditions, a
 species $M$ is isomorphic to the species of assemblies of connected structures:
 $M = \exp (M_C)$.
 
-EXAMPLE 11. \term{Forests} are assemblies of trees. Forests of
-arborescences are assemblies of arborescences. Permutations are
-assemblies of circular permutations. Partitions are assemblies of
-partitions with a single class, \etc
+\begin{ex}
+  \term{Forests} are assemblies of trees. Forests of rooted trees are
+  assemblies of rooted trees. Permutations are assemblies of circular
+  permutations. Partitions are assemblies of partitions with a single
+  class, \etc
+\end{ex}
 
 The operation of \term{substitution} of one species into another is
 the richest in possibilities.
 
-DEFINITION 7. Let $R$ and $N$ be species and assume that $N [0] = \varnothing$.
+\begin{defn}
+Let $R$ and $N$ be species and assume that $N [0] = \varnothing$.
 The species $R (N)$ is that of pairs $(a, \rho)$, where $a$ is an assembly of $N$-
 structures and $\rho$ is an $R$-structure on the set of members of $a$.
 
@@ -633,11 +650,15 @@ We say that $R (N)$ is the result of \term{substituting} $N$ into $R$. We
 say that an element of $R (N)$ is an $R$-assembly (of $N$-structures). Note
 immediately that $\exp (N)$ is the result of substituting $N$ in
 the \emph{uniform} species (Ex. 7).
+\end{defn}
 
-Theorem 1. Assuming $N [0] = \varnothing$, we have
-\[ \Card R (N) = R (N (x)). \]
+\begin{thm}
+  Assuming $N [0] = \varnothing$, we have
+  \[ \Card R (N) = R (N (x)). \]
+\end{thm}
 
-Proof. For each integer $n \geq 0$, let $R_n$ be the species of $R$-structures
+\begin{proof}
+For each integer $n \geq 0$, let $R_n$ be the species of $R$-structures
 where the underlying set has cardinality $n$. It has a decomposition
 as a disjoint sum
 \[ R = \sum_{n \geq 0} R_n, \]
@@ -652,30 +673,32 @@ resulting in
   \frac{N(x)^n}{n!} \\
   &= R(N(x)).
 \end{align*}
+\end{proof}
 
-
-Remarks. To think combinatorially it is necessary
-to give visual representations. To grasp the nature of a species is to be
-capable of representing the general shape of its structures. The \emph{shape} of a
-structure is invariant under isomorphism. What is needed to get
-represent first is the general type of structures of a given species. XXX ???
-This type is independent of a labelling or an enumeration of the vertices
-of the underlying set. For example, suppose that we want to
-represent the general type of structures of the species $R(N)$ knowing that we
-already have a representation for $R$ and $N$. What we can do is to literally
-substitute arbitrarily selected $N$-structures in place of each vertex of an $R$-structure,
-For this, one can imagine that
-the vertices of the $R$-structure blow up into cells containing the $N$-structures.
-The underlying set of a cellular configuration is the sum of
-the underlying sets of the structures contained in the cells. Thus, if we
-substitute the species of circular permutations into the species of trees, we
-obtain a species whose general type can be represented as in
-Figure 4.
+\begin{rem}
+  To think combinatorially it is necessary to give visual
+  representations. To grasp the nature of a species is to be capable
+  of representing the general shape of its structures. The
+  \emph{shape} of a structure is invariant under isomorphism. What is
+  needed to get represent first is the general type of structures of a
+  given species. XXX ???  This type is independent of a labelling or
+  an enumeration of the vertices of the underlying set. For example,
+  suppose that we want to represent the general type of structures of
+  the species $R(N)$ knowing that we already have a representation for
+  $R$ and $N$. What we can do is to literally substitute arbitrarily
+  selected $N$-structures in place of each vertex of an $R$-structure,
+  For this, one can imagine that the vertices of the $R$-structure
+  blow up into cells containing the $N$-structures.  The underlying
+  set of a cellular configuration is the sum of the underlying sets of
+  the structures contained in the cells. Thus, if we substitute the
+  species of circular permutations into the species of trees, we
+  obtain a species whose general type can be represented as in Figure
+  4.
 
 This representation is not the only one, and it is convenient to adapt to
 the particularities of a species. For example, suppose that the species $N$
 is \emph{pointed}, that is, equipped with a morphism $N \to^p B$ where $B$ is the species
-of "vertices" ($B [E] = E$ for $E \in B$). Each structure $s \in N[E]$ then has
+of ``vertices'' ($B [E] = E$ for $E \in B$). Each structure $s \in N[E]$ then has
 a \emph{base point} $p (s) \in E$. One can used the base points to
 give another representation of $R (N)$-structures: for each vertex
 of an $R$-structure one chooses an $N$-structure and makes the vertex \emph{coincide}
@@ -684,33 +707,32 @@ a rooted tree is the root; if we substitute the species $A$ of rooted trees
 into that of (nonempty) linear orders, we obtain the species of vertebrates
 (Ex. 9). When $N$ is pointed we can define substitution as follows: an
 $R (N)$-structure on $E$ is a triplet $(v, \alpha, \beta)$, where
-
-(1) $v$ is an idempotent function $E \to E$,
-(2) $\alpha$ is a function that selects for each $x \in \Im (v)$ a structure
-
-
+\begin{enumerate}
+\item $v$ is an idempotent function $E \to E$,
+\item $\alpha$ is a function that selects for each $x \in \Im (v)$ a
+  structure $\alpha (x) \in N [v^{-1}\{x\}]$ such that the base point
+  of $\alpha (x)$ \emph{coincides} with $x \in v^{-1}\{x\}$,
+\item $\beta$ is an $R$-structure on $\Im (v)$.
+\end{enumerate}
+\end{rem}
 
 FIGURE 4
 
-$\alpha (x) \in N [v^{-1}\{x\}]$ such that the base point of $\alpha (x)$ \emph{coincides} with $x \in v^{-1}\{x\}$,
 
-(3) $\beta$ is an $R$-structure on $\Im (v)$.
-
-Example 12. Let $D$ be the species of endofunctions, $S$ that of
-permutations, and $A$ that of arborescences. We have the decomposition
-
-\[ D = S(A). \]
-
-Indeed, let $\phi \in D [E]$. A point $x \in E$ is \term{periodic} if there exists an integer
-$n \geq 1$ such that $\phi^n(x) = x$. The function $\phi$ \term{permutes} the periodic points.
-For each $x \in E$ let $v (x)$ be the first periodic point in the
-sequence $x, \phi(x), \phi^2(x) \dots$. The function $v$ is idempotent and its image is the set
-of periodic points. For each $x \in \Im (v)$ the fiber $v^{-1}\{x\}$ is
-equipped with a arborescence structure whose root is $x$. \emph{Conversely}, if
-one has an assembly of arborescences and a permutation of the set of roots,
-it is clear that one can construct a corresponding endofunction
-$\phi$ (FIG 5)
-
+\begin{ex}
+Let $D$ be the species of endofunctions, $S$ that of
+permutations, and $A$ that of rooted trees. We have the decomposition
+\[ D = S(A). \] Indeed, let $\phi \in D [E]$. A point $x \in E$ is
+\term{periodic} if there exists an integer $n \geq 1$ such that
+$\phi^n(x) = x$. The function $\phi$ \term{permutes} the periodic
+points.  For each $x \in E$ let $v (x)$ be the first periodic point in
+the sequence $x, \phi(x), \phi^2(x) \dots$. The function $v$ is
+idempotent and its image is the set of periodic points. For each $x
+\in \Im (v)$ the fiber $v^{-1}\{x\}$ is equipped with a rooted tree
+structure whose root is $x$. \emph{Conversely}, if one has an assembly
+of rooted trees and a permutation of the set of roots, it is clear
+that one can construct a corresponding endofunction $\phi$ (FIG 5)
+\end{ex}
 
 
 
@@ -723,8 +745,8 @@ Examples 9 and 12 give a simple proof of Cayley's theorem: the number
 $a_n$ of trees on a set of cardinality $n \geq 1$ is
 $n^{n-2}$. Indeed, the number of vertebrates (bipointed trees) is
 equal to $n^2a_n$.  Example 9 shows that the vertebrates are
-\emph{linear} assembies of arborescences.  Example 10 shows that
-endofunctions are \emph{permuted} assemblies of arborescences.  As the
+\emph{linear} assembies of rooted trees.  Example 10 shows that
+endofunctions are \emph{permuted} assemblies of rooted trees.  As the
 number of linear orders coincides with the number of permutations, one
 obtains $n^2 a_n = n^n$ $(n \geq 1)$.
 
@@ -743,14 +765,97 @@ in order to avoid confusion with $1/(1-X)$. Similarly, we will use the
 notation $C (X)$ rather than $\log 1/(1-X)$ to designate the species
 of circular permutations, \etc
 
-EXAMPLE 13. A preorder relation $\leq$ on $E$ determines an
-equivalence relation: $x \equiv y$ if and only if one has $x \leq y$ and $y \leq x$.
-The preorder relation induced on the quotient $E / \equiv$ is an order relation (???), and conversely.
-This shows that the species of preorders is obtained by substituting the species
-$e^X - 1$ in the species of order relations. In particular, the species of
-total preorders is
+\begin{ex}
+  A preorder relation $\leq$ on $E$ determines an equivalence
+  relation: $x \equiv y$ if and only if one has $x \leq y$ and $y \leq
+  x$.  The preorder relation induced on the quotient $E / \equiv$ is
+  an order relation (???), and conversely.  This shows that the
+  species of preorders is obtained by substituting the species $e^X -
+  1$ in the species of order relations. In particular, the species of
+  total preorders is
+  \[ \frac{1}{1 - (e^X - 1)} = \frac{1}{2 - e^X}. \]
+\end{ex}
 
-\[ \frac{1}{1 - (e^X - 1)} = \frac{1}{2 - e^X}. \]
+FIGURE 6
+
+\begin{ex}
+  In a graph, two vertices are \term{doubly connected} if we can
+  connect them with a path avoiding any edge selected beforehand. The
+  vertices of a graph can be partitioned into doubly connected
+  components.  Let $\Gc$ be the species of connected pointed graphs
+  and $\Gcc$ that of doubly connected pointed graphs. We have the
+  relation
+  \[ \Gc = \Gcc(Xe^{\Gc(X)}). \] Indeed, in a connected pointed graph,
+  consider the doubly connected component $H$ of the base point; for
+  each vertex $x$ let $v(x)$ be the closest vertex located in the
+  component $H$. We can easily verify that $v$ is well defined. It is
+  an idempotent function whose fibers are equipped with a structure of
+  the species $X \cdot e^{\Gc(X)}$; the image of $v$ coincides with
+  the doubly connected pointed graph $H$ (XXX FIG 6).
+\end{ex}
+
+
+FIGURE 7
+
+
+
+FIGURE 8
+
+\begin{ex}[Polya XXX CITE]
+  Consider the species $A$ of rooted trees.  One has the identity (XXX
+  FIG. 7)
+\[ A = X \cdot \exp (A). \]
+More generally, the species $A_R$ of R-enriched trees satisfies
+the equation (see 1.3, Fig. 0 XXX)
+\[ A_R = X \cdot R(A_R). \]
+\end{ex}
+
+\subsection{Differential calculus}
+
+For any finite set $E$, let $E^+$ be the set obtained by adjoining to $E$
+an additional item $*$:
+\[ E^+ = E + \{ * \}. \]
+
+\begin{defn}
+The \term{derivative} species $M'$ of a species $M$ is defined as
+follows:
+\[ M' [E] = M [E^+]. \]
+\end{defn}
+
+\begin{ex}
+  The derivative of the species $C (X)$ of circular permutations is
+  the species of linear orders (Fig. 8 XXX):
+  \[ C'(X) = \frac{1}{1 - X} \]
+\end{ex}
+
+FIGURE 9
+
+
+
+
+
+FIGURE 10
+
+\begin{ex}
+  The derivative of the species of trees is that of forests of pointed
+  trees XXX FIg 9).
+\end{ex}
+
+\begin{ex}
+  Recall that a graph is \term{even} if the number of edges adjacent
+  to each vertex is even. The derivative of the species of even graphs
+  is the species of graphs (Fig. l0 XXX). (Harary and Palmer [15] XXX
+  CITE)
+\end{ex}
+
+\begin{ex}
+  The derivative of the species of linear orders $1 / (1-X)$ is equal
+  to $(1 / (1-X)) \cdot (1 / (1-X))$.
+\end{ex}
+
+Recall that a \term{pointed} structure of the species $M$ on $E$ is an
+element of $E \times M [E]$. We denote by $\pointed M$ the species of
+pointed $M$-structures.
 
 \bibliographystyle{plainnat}
 \bibliography{series-formelles}
